--- a/rpg-crud/index.html
+++ b/rpg-crud/index.html
@@ -3,12 +3,274 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Teste RPG CRUD</title>
+    <title>RPG CRUD</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+    />
+    <link rel="stylesheet" href="style/style.css" />
   </head>
-  <body>
-    <h1>Testando sistema de RPG</h1>
-    <p>Abre o console para ver os testes</p>
+  <body class="bg-dark text-light">
+    <div class="container py-4">
+      <!-- Feedback visual -->
+      <div id="alertContainer"></div>
 
-    <script type="module" src="script/teste.js"></script>
+      <!-- Card Personagens -->
+      <div class="card bg-dark text-light mb-5 shadow">
+        <div
+          class="card-header d-flex justify-content-between align-items-center"
+        >
+          <h2 class="mb-0">
+            <i class="bi bi-people-fill me-2 text-info"></i>
+            Gerenciar Personagens
+          </h2>
+          <button
+            class="btn btn-outline-info btn-sm"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#personagensCollapse"
+          >
+            <i class="bi bi-chevron-down"></i>
+          </button>
+        </div>
+        <div class="collapse show" id="personagensCollapse">
+          <div class="card-body">
+            <form id="formPersonagem" class="mb-4">
+              <div class="row g-2">
+                <div class="col-md-3">
+                  <label for="nome" class="form-label">Nome</label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="nome"
+                    placeholder="Nome do Aventureiro"
+                    required
+                  />
+                </div>
+                <div class="col-md-2">
+                  <label for="classe" class="form-label">Classe</label>
+                  <select class="form-select" id="classe" required>
+                    <option value="" disabled selected>Classe</option>
+                    <option value="Guerreiro">Guerreiro</option>
+                    <option value="Mago">Mago</option>
+                    <option value="Arqueiro">Arqueiro</option>
+                    <option value="Ladino">Ladino</option>
+                    <option value="Bardo">Bardo</option>
+                  </select>
+                </div>
+                <div class="col-md-2">
+                  <label for="level" class="form-label">Level</label>
+                  <input
+                    type="number"
+                    class="form-control"
+                    id="level"
+                    placeholder="Level"
+                    required
+                  />
+                </div>
+                <div class="col-md-2">
+                  <label for="forca" class="form-label">Força</label>
+                  <input
+                    type="number"
+                    min="0"
+                    max="10"
+                    class="form-control"
+                    id="forca"
+                    placeholder="Força (0–10)"
+                    required
+                  />
+                </div>
+                <div class="col-md-2">
+                  <label for="defesa" class="form-label">Defesa</label>
+                  <input
+                    type="number"
+                    min="0"
+                    max="10"
+                    class="form-control"
+                    id="defesa"
+                    placeholder="Defesa (0–10)"
+                    required
+                  />
+                </div>
+                <div class="col-md-1 col-sm-12 d-grid align-self-end">
+                  <button class="btn btn-outline-info w-100" type="submit">
+                    <i class="bi bi-plus-circle me-1"></i>Adicionar
+                  </button>
+                </div>
+              </div>
+
+              <div class="row justify-content-end my-3">
+                <div class="col-md-4">
+                  <div class="input-group">
+                    <input
+                      type="number"
+                      class="form-control"
+                      id="buscarPersonagemId"
+                      placeholder="Buscar por ID"
+                    />
+                    <button
+                      class="btn btn-outline-info"
+                      id="btnBuscarPersonagem"
+                      type="button"
+                    >
+                      <i class="bi bi-search"></i>
+                    </button>
+                  </div>
+                </div>
+                <div class="col-md-2 d-grid">
+                  <button
+                    class="btn btn-outline-light"
+                    id="btnListarPersonagens"
+                    type="button"
+                  >
+                    <i class="bi bi-list-ul me-1"></i>Listar Todos
+                  </button>
+                </div>
+              </div>
+            </form>
+
+            <table class="table table-dark table-hover" id="tabelaPersonagens">
+              <thead>
+                <tr>
+                  <th>ID</th>
+                  <th>Nome</th>
+                  <th>Classe</th>
+                  <th>Level</th>
+                  <th>Força</th>
+                  <th>Defesa</th>
+                </tr>
+              </thead>
+              <tbody></tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+
+      <!-- Card Itens Mágicos -->
+      <div class="card bg-dark text-light shadow">
+        <div
+          class="card-header d-flex justify-content-between align-items-center"
+        >
+          <h2 class="mb-0">
+            <i class="bi bi-gem me-2 text-warning"></i>
+            Gerenciar Itens Mágicos
+          </h2>
+          <button
+            class="btn btn-outline-warning btn-sm"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#itensMagicosCollapse"
+          >
+            <i class="bi bi-chevron-down"></i>
+          </button>
+        </div>
+        <div class="collapse show" id="itensMagicosCollapse">
+          <div class="card-body">
+            <form id="formItemMagico" class="mb-4">
+              <div class="row g-2">
+                <div class="col-md-3">
+                  <label for="nomeItem" class="form-label">Nome do Item</label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="nomeItem"
+                    placeholder="Nome do Item"
+                    required
+                  />
+                </div>
+                <div class="col-md-2">
+                  <label for="tipoItem" class="form-label">Tipo</label>
+                  <select class="form-select" id="tipoItem" required>
+                    <option value="" disabled selected>Tipo</option>
+                    <option value="Arma">Arma</option>
+                    <option value="Armadura">Armadura</option>
+                    <option value="Amuleto">Amuleto</option>
+                  </select>
+                </div>
+                <div class="col-md-2">
+                  <label for="forcaItem" class="form-label">Força</label>
+                  <input
+                    type="number"
+                    min="0"
+                    max="10"
+                    class="form-control"
+                    id="forcaItem"
+                    placeholder="Força (0–10)"
+                    required
+                  />
+                </div>
+                <div class="col-md-2">
+                  <label for="defesaItem" class="form-label">Defesa</label>
+                  <input
+                    type="number"
+                    min="0"
+                    max="10"
+                    class="form-control"
+                    id="defesaItem"
+                    placeholder="Defesa (0–10)"
+                    required
+                  />
+                </div>
+                <div class="col-md-1 d-grid align-self-end">
+                  <button class="btn btn-outline-warning" type="submit">
+                    <i class="bi bi-save me-1"></i>Salvar
+                  </button>
+                </div>
+                <div class="col-md-2 d-grid align-self-end">
+                  <button
+                    class="btn btn-outline-info"
+                    id="btnListarItens"
+                    type="button"
+                  >
+                    <i class="bi bi-list-ul me-1"></i>Listar Todos
+                  </button>
+                </div>
+              </div>
+
+              <div class="row justify-content-end mb-3 mt-2">
+                <div class="col-md-4">
+                  <div class="input-group">
+                    <input
+                      type="number"
+                      class="form-control"
+                      id="buscarItemId"
+                      placeholder="Buscar por ID"
+                    />
+                    <button
+                      class="btn btn-outline-warning"
+                      id="btnBuscarItem"
+                      type="button"
+                    >
+                      <i class="bi bi-search"></i>
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </form>
+
+            <table class="table table-dark table-hover" id="tabelaItensMagicos">
+              <thead>
+                <tr>
+                  <th>ID</th>
+                  <th>Nome</th>
+                  <th>Tipo</th>
+                  <th>Força</th>
+                  <th>Defesa</th>
+                  <th>Ações</th>
+                </tr>
+              </thead>
+              <tbody></tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script type="module" src="script/script.js"></script>
   </body>
 </html>
