--- a/rpg-crud/index.html
+++ b/rpg-crud/index.html
@@ -16,10 +16,8 @@
   </head>
   <body class="bg-dark text-light">
     <div class="container py-4">
-      <!-- Feedback visual -->
       <div id="alertContainer"></div>
 
-      <!-- Card Personagens -->
       <div class="card bg-dark text-light mb-5 shadow">
         <div
           class="card-header d-flex justify-content-between align-items-center"
@@ -47,7 +45,19 @@
                     type="text"
                     class="form-control"
                     id="nome"
-                    placeholder="Nome do Aventureiro"
+                    placeholder="Nome do Jogador"
+                    required
+                  />
+                </div>
+                <div class="col-md-3">
+                  <label for="nome" class="form-label"
+                    >Nome do Aventureiro</label
+                  >
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="nomeAventureiro"
+                    placeholder="Nickname"
                     required
                   />
                 </div>
@@ -129,6 +139,7 @@
                   >
                     <i class="bi bi-list-ul me-1"></i>Listar Todos
                   </button>
+                  <div id="tabela-personagens" class="mt-4"></div>
                 </div>
               </div>
             </form>
@@ -150,7 +161,6 @@
         </div>
       </div>
 
-      <!-- Card Itens Mágicos -->
       <div class="card bg-dark text-light shadow">
         <div
           class="card-header d-flex justify-content-between align-items-center"
